@@ -9,7 +9,10 @@ public class Bash {
     public static String bash(String command) {
         String[] cmd = {"bash", "-c", command};
         try {
-            Process process = Runtime.getRuntime().exec(cmd);
+            ProcessBuilder processBuilder = new ProcessBuilder(cmd);
+            processBuilder.redirectError();
+            Process process = processBuilder.start();
+
             int result = process.waitFor();
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             StringBuilder builder = new StringBuilder();
@@ -25,6 +28,7 @@ public class Bash {
             }
             if (result != 0) {
                 System.out.println(builder.toString());
+                throw new RuntimeException("Bash ["+command + "] failed with exit code:"+result);
             }
 
             return builder.toString();
